# weather-cli

./: Cargo.toml  README.md
crates/call-api/: Cargo.toml
crates/call-api/src/: lib.rs  wheater_calls.rs
src/: main.rs
