workspace = { members = ["crates/call-api"] }
[package]
name = "weather-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
reqwest = {version = "0.11", features = ["json"]}
tokio = {version = "1", features = ["full"]}
serde = { version = "1.0", features = ["derive"] }
dotenv = "0.15.0"
# internal crates
call-api = {path = "crates/call-api"}
tabled = "0.15.0"


